--- a/public/index.html
+++ b/public/index.html
@@ -165,7 +165,7 @@
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script type="text/javascript" src="assets/client.js"></script>
-    <script type="text/javascript" src="index.js"></script>
+    <script type="text/babel" src="../src/index.js"></script>
 
 </body>
 
