--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title> Explore Your Options</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="https://fonts.googleapis.com/css?family=Assistant:200,300,400" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
